--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "matrix.js",
   "scripts": {
-    "serve": "webpack-dev-server",
+    "serve": "webpack serve",
     "c:prod": "webpack -p",
     "c:dev": "webpack -d"
   },
@@ -17,13 +17,13 @@
   "author": "zondazx",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^4.3.0",
+    "css-loader": "5.0.0",
     "dayjs": "^1.9.3",
     "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "^0.12.0",
-    "style-loader": "^1.3.0",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "mini-css-extract-plugin": "1.0.0",
+    "style-loader": "2.0.0",
+    "webpack": "5.1.0",
+    "webpack-cli": "4.0.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
