--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "css-loader": "5.0.0",
     "dayjs": "^1.9.3",
     "file-loader": "^6.1.1",
-    "html-webpack-plugin": "^4.5.0",
-    "mini-css-extract-plugin": "1.0.0",
+    "html-webpack-plugin": "5.0.0-alpha.6",
+    "mini-css-extract-plugin": "1.1.1",
     "style-loader": "2.0.0",
     "url-loader": "^4.1.1",
-    "webpack": "5.1.0",
-    "webpack-cli": "4.0.0",
+    "webpack": "5.1.3",
+    "webpack-cli": "4.1.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
