--- a/package.json
+++ b/package.json
@@ -1,31 +1,33 @@
 {
-  "name": "calendar",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/scripts/Calendar.js",
-  "scripts": {
-    "serve": "webpack serve",
-    "c:prod": "webpack --mode=production",
-    "c:dev": "webpack --mode=development"
-  },
-  "keywords": [
-    "js",
-    "calendar",
-    "date",
-    "javascript"
-  ],
-  "author": "zondazx",
-  "license": "ISC",
-  "devDependencies": {
-    "css-loader": "5.0.0",
-    "dayjs": "^1.9.3",
-    "file-loader": "^6.1.1",
-    "html-webpack-plugin": "5.0.0-alpha.6",
-    "mini-css-extract-plugin": "1.1.1",
-    "style-loader": "2.0.0",
-    "url-loader": "^4.1.1",
-    "webpack": "5.1.3",
-    "webpack-cli": "4.1.0",
-    "webpack-dev-server": "^3.11.0"
-  }
+    "name": "calendar",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/scripts/Calendar.js",
+    "scripts": {
+        "serve": "webpack serve",
+        "c:prod": "webpack --mode=production",
+        "c:dev": "webpack --mode=development"
+    },
+    "keywords": [
+        "js",
+        "calendar",
+        "date",
+        "javascript"
+    ],
+    "author": "zondazx",
+    "license": "ISC",
+    "dependencies": {
+        "dayjs": "^1.9.3"
+    },
+    "devDependencies": {
+        "css-loader": "5.0.0",
+        "file-loader": "^6.1.1",
+        "html-webpack-plugin": "5.0.0-alpha.6",
+        "mini-css-extract-plugin": "1.1.1",
+        "style-loader": "2.0.0",
+        "url-loader": "^4.1.1",
+        "webpack": "5.1.3",
+        "webpack-cli": "4.1.0",
+        "webpack-dev-server": "^3.11.0"
+    }
 }
