--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "author": "zondazx",
     "license": "ISC",
     "dependencies": {
-        "dayjs": "^1.9.3"
+        "dayjs": "1.9.4"
     },
     "devDependencies": {
         "css-loader": "5.0.0",
-        "file-loader": "^6.1.1",
+        "file-loader": "6.2.0",
         "html-webpack-plugin": "5.0.0-alpha.6",
-        "mini-css-extract-plugin": "1.1.1",
+        "mini-css-extract-plugin": "1.2.1",
         "style-loader": "2.0.0",
         "url-loader": "^4.1.1",
-        "webpack": "5.1.3",
+        "webpack": "5.3.0",
         "webpack-cli": "4.1.0",
         "webpack-dev-server": "^3.11.0"
     }
