--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "calendar",
     "version": "1.0.0",
     "description": "",
-    "main": "src/js/Calendar.js",
+    "main": "src/js/calendar.js",
     "scripts": {
         "serve": "webpack serve",
         "c:prod": "webpack --mode=production",
@@ -17,17 +17,17 @@
     "author": "zondazx",
     "license": "ISC",
     "dependencies": {
-        "dayjs": "1.9.4"
+        "dayjs": "1.9.6"
     },
     "devDependencies": {
-        "css-loader": "5.0.0",
+        "css-loader": "5.0.1",
         "file-loader": "6.2.0",
         "html-webpack-plugin": "5.0.0-alpha.6",
-        "mini-css-extract-plugin": "1.2.1",
+        "mini-css-extract-plugin": "1.3.1",
         "style-loader": "2.0.0",
         "url-loader": "^4.1.1",
-        "webpack": "5.3.2",
-        "webpack-cli": "4.1.0",
+        "webpack": "5.6.0",
+        "webpack-cli": "4.2.0",
         "webpack-dev-server": "^3.11.0"
     }
 }
